# linc

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  build.sh  changelog.md  environment.sh  grammar.md  install.sh  readme.md  test.linc
assets/images/: linc.xcf  linc128.xcf  linc64.xcf
core/include/linc/: Binder.hpp  BoundTree.hpp  Generator.hpp  Include.hpp  Lexer.hpp  Parser.hpp  Preprocessor.hpp  System.hpp  Tree.hpp
core/src/bound_tree/: Binder.cpp  BoundArrayIndexExpression.cpp  BoundArrayInitializerExpression.cpp  BoundBinaryExpression.cpp  BoundBlockExpression.cpp  BoundConversionExpression.cpp  BoundDeclarationStatement.cpp  BoundExpressionStatement.cpp  BoundExternalCallExpression.cpp  BoundExternalDeclaration.cpp  BoundForExpression.cpp  BoundFunctionCallExpression.cpp  BoundFunctionDeclaration.cpp  BoundIdentifierExpression.cpp  BoundIfElseExpression.cpp  BoundIfExpression.cpp  (+10 more)
examples/: arrays.linc  brainfuck.linc  default_values.linc  enums.linc  fibonacci.linc  format.linc  function_pointers.linc  iteration.linc  loops.linc  macros.linc  main_args.linc  shadowing.linc  shell.linc  structures.linc
examples/0.2.1/: fibonacci.linc  square_root.linc  while_plus_plus.linc
examples/0.4/: exponentiation.linc  fibonacci.linc  preprocessor.linc  square_root.linc  utility.linc  while_plus_plus.linc
examples/0.5/: arrays.linc  default_values.linc  exponentiation.linc  fibonacci.linc  square_root.linc  utility.linc
examples/0.6/: arrays.linc  brainfuck.linc  default_values.linc  fibonacci.linc  format.linc  macros.linc  main_args.linc  shell.linc  structures.linc
examples/ext/: attribution..md  hello_world.bf
guide/: 0-getting_started.md  1-hello_world.md  2-variables_introduction.md  2.1-declaring_variables.md  3-expressions.md  4-mutability.md  5-io.md  6-conditionals.md  7-while_loops.md  8-for_loops.md
src/: Arguments.hpp  Windows.hpp  lincc.cpp  lincenv.cpp  notice
std/: lincinternal.asm  lincinternal.s  linclinux.asm  std.linc  stdinternal.s  stdio.linc  stdlimits.linc  stdmath.linc  stdoption.linc  stdstring.linc
tests/: linctest.cpp  testing.cmake
(+169 files in other folders)
